[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vehicle-web-teleop"
version = "0.1.0"
description = "Jetson-hosted WebSocket teleop server for Dynamixel RS485 drive motors"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
vehicle-web-teleop = "vehicle_web_teleop.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
